--- a/style.css
+++ b/style.css
@@ -762,4 +762,10 @@ button:focus {
         border-top-right-radius: 6px;
         border-bottom-left-radius: 6px;
     }
+
+}
+
+.msg-head {
+    display: flex;
+    justify-content: space-between;
 }
