Restore reset CSS and typography styles
Restored the reset CSS and typography styles in style.css.

--- a/style.css
+++ b/style.css
@@ -708,14 +708,12 @@ button:focus {
 
 @media (max-width: 767px) {
     .chat-icon {
-    display: block;
-    margin-right: 5px;
-    position: fixed;
-    align-items: center;
-    justify-content: center;
-    top: 2px;
-    color: #3867d6;
-}
+        display: block;
+        left: 15px;
+        position: fixed;
+        top: 2px;
+        color: #3867d6;
+    }
     .chatlist {
         width: 100%;
     }
@@ -774,5 +772,6 @@ button:focus {
     display: flex;
     justify-content: space-between;
 }
+
 
 
